mario/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: rapa.com
      http:
        paths:
          - path: /httpd
            pathType: Prefix
            backend:
              service:
                name: svc-myhttpd
                port:
                  number: 80
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: svc-mynginx
                port:
                  number: 80
